# MLP_base

./: CMakeLists.txt  README  main.cpp
include/: activation.h  activation.hpp  gpu_activation_helper.hpp  gpu_error_checking.hpp  layer.h  layer.hpp  linear.h  linear.hpp  loss.hpp  mlp.h  mlp.hpp  optimizer.hpp  profiler.h  test_activation.hpp  timing_utils.hpp  trainer.hpp
src/: activation.cpp  gpu_activation_helper.cpp  linear.cu  loss.cpp  loss.cu  mlp.cpp  optimizer.cpp  profiler.cpp  test_activation.cpp  trainer.cpp
tests/: test_activation.cpp  test_activation.hpp  test_loss.cpp  test_loss.hpp  test_mlp_linear.cpp  test_mlp_linear.hpp
